Revision history for {{$dist->name}}

{{$NEXT}}
  - lots more tests

0.05      2013-09-25 03:34:13Z
  - re-release with fixed compile test

0.04      2013-09-14 17:32:26Z
  - remove use of deprecated Class::MOP::load_class

0.03   2010-05-07 22:29:00 +0200
  - Stop using the deprecated get_method_map method.

0.02   2009-05-28 06:05:26 +0200
  - Declare dependency on Test::Tester.

0.01   2009-05-16 18:32:11 +0200
  - Initial release.